[package]
name = "smol-play"
version = "0.1.0"
edition = "2021"
debug = "true"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "elvos"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
smoltcp = {version = "0.11.0", features = ["verbose", "log"]}
log = "0.4.22"
env_logger = "0.11.3"
pyo3 = { git = "https://github.com/pyo3/pyo3", features = ["extension-module"] }